Bug 406338 - No print preview available
Summary: No print preview available
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.3
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-08 17:04 UTC by Ralf Habacker
Modified: 2021-08-24 19:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5,5.2.0
Sentry Crash Report:


Attachments
Related patch for branch 4.8 (6.48 KB, patch)
2019-10-01 17:16 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-04-08 17:04:10 UTC
KMyMoney does not provide a report print preview.


STEPS TO REPRODUCE
1. start kmymoney
2. open a kmymoney file
3. Select file menu (or inspect tool bar)

OBSERVED RESULT
There is no entry for a print preview

EXPECTED RESULT
There should be an entry for a print preview

ADDITIONAL INFORMATION
A print preview is useful to see if a report would fit into the choosen page orientation and/or size.
Comment 1 Ralf Habacker 2019-10-01 17:16:45 UTC
Created attachment 122967 [details]
Related patch for branch 4.8
Comment 2 Ralf Habacker 2019-10-11 10:16:26 UTC
See https://bugs.kde.org/show_bug.cgi?id=412366#c12 for issues with unpatched kdelibs for 4.8 builds
Comment 3 Ralf Habacker 2019-10-11 10:27:08 UTC
(In reply to Ralf Habacker from comment #2)
> See https://bugs.kde.org/show_bug.cgi?id=412366#c12 for issues with
> unpatched kdelibs for 4.8 builds

Windows versions use a patched kdelibs by default, which means that this problem affects releases on Unix-like operating systems.
Comment 4 Ralf Habacker 2019-10-11 10:39:16 UTC
Git commit 04af112832af9307c6a2c82bb83e8bf993a19433 by Ralf Habacker.
Committed on 11/10/2019 at 10:38.
Pushed by habacker into branch '4.8'.

Disable the print preview with an unpatched kdelibs to avoid problems with the print settings

See https://bugs.kde.org/show_bug.cgi?id=412366#c12 for details
Related: bug 412366

M  +4    -0    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/04af112832af9307c6a2c82bb83e8bf993a19433
Comment 5 Ralf Habacker 2019-10-11 10:39:16 UTC
Git commit 0dd809ab050c558a158a537ee568e4b8c689fcb8 by Ralf Habacker.
Committed on 11/10/2019 at 10:38.
Pushed by habacker into branch '4.8'.

Add print preview for charts
FIXED-IN:4.8.5

M  +7    -0    kmymoney/kmymoney.cpp
M  +5    -0    kmymoney/kmymoney.h
M  +1    -0    kmymoney/kmymoneyui.rc
M  +27   -2    kmymoney/views/khomeview.cpp
M  +10   -0    kmymoney/views/khomeview.h
M  +8    -0    kmymoney/views/kmymoneyview.cpp
M  +5    -0    kmymoney/views/kmymoneyview.h
M  +15   -0    kmymoney/views/kreportsview.cpp
M  +2    -0    kmymoney/views/kreportsview.h

https://commits.kde.org/kmymoney/0dd809ab050c558a158a537ee568e4b8c689fcb8
Comment 6 Ralf Habacker 2021-08-13 05:55:13 UTC
Git commit 664363de006838ccca96e0542dde56c5bacdaf1c by Ralf Habacker.
Committed on 13/08/2021 at 05:54.
Pushed by habacker into branch 'master-print-preview-406338'.

Add print preview support to reports and home view
FIXED-IN:5.2.0

M  +2    -0    kmymoney/kmymoney.cpp
M  +1    -0    kmymoney/menus/menuenums.h
M  +1    -1    kmymoney/misc/kmm_printer.h
M  +12   -0    kmymoney/plugins/views/reports/kreportsview.cpp
M  +1    -0    kmymoney/plugins/views/reports/kreportsview.h
M  +13   -0    kmymoney/plugins/views/reports/kreportsview_p.h
M  +19   -0    kmymoney/views/khomeview.cpp
M  +1    -0    kmymoney/views/khomeview.h
M  +1    -0    kmymoney/views/kmymoneyview.cpp

https://invent.kde.org/office/kmymoney/commit/664363de006838ccca96e0542dde56c5bacdaf1c
Comment 7 Ralf Habacker 2021-08-24 19:50:44 UTC
Git commit b29cd34c49820928a2ea472571b89ecf4f258b0b by Ralf Habacker.
Committed on 23/08/2021 at 13:58.
Pushed by habacker into branch 'master'.

Add print preview support to reports and home view
FIXED-IN:5.2.0

M  +2    -0    kmymoney/kmymoney.cpp
M  +1    -0    kmymoney/menus/menuenums.h
M  +1    -1    kmymoney/misc/kmm_printer.h
M  +12   -0    kmymoney/plugins/views/reports/kreportsview.cpp
M  +1    -0    kmymoney/plugins/views/reports/kreportsview.h
M  +34   -0    kmymoney/plugins/views/reports/kreportsview_p.h
M  +40   -0    kmymoney/views/khomeview.cpp
M  +1    -0    kmymoney/views/khomeview.h
M  +1    -0    kmymoney/views/kmymoneyview.cpp

https://invent.kde.org/office/kmymoney/commit/b29cd34c49820928a2ea472571b89ecf4f258b0b