Add print preview for charts

BUG:406338
FIXED-IN:4.8.5