kmymoney/views/kreportsview.h
@@ -109,6 +109,7 @@ public:
       return m_report;
     }
     void print();
+    void printPreview();
     void toggleChart();
     void copyToClipboard();
     void saveAs(const QString& filename, bool includeCSS = false);
@@ -216,6 +217,7 @@ public slots:
 
   void slotLoadView();
   void slotPrintView();
+  void slotPrintPreviewView();
   void slotCopyView();
   void slotSaveView();
   void slotConfigure();
